--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
   },
   "homepage": "https://github.com/dmitryvmin/cet#readme",
   "devDependencies": {
+    "foundation": "^4.2.1-1",
     "gulp": "^3.9.1",
-    "gulp-sass": "^2.3.2"
+    "gulp-sass": "^2.3.2",
+    "susy": "^2.2.12"
   }
 }
